fixed junit tests
Issue #749